@@ -1,3 +1,8 @@
+2004-09-09 Jeff Connelly <jeffconnelly@users.sourceforge.net>
+	* "string".encode("hex") replaced with format strings instead--
+	  sumiserv should now run compiled on Win32
+	* updated docs about Windows XP SP2
+
 2004-09-08 Jeff Connelly <jeffconnelly@users.sourceforge.net>
 	* broadcasting - send to multiple clients simultaneously (beta),
 	  this paves the way for multicast support (not yet implemented)
